[tool.poetry]
name = "service_template"
version = "0.1.0"
description = "A basic service template"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pytest = {version = "^5.4.2", optional = true}
black = {version = "^19.10b0", optional = true}
mypy = {version = "^0.770", optional = true}
flake8 = {version = "^3.8.1", optional = true}

[tool.poetry.dev-dependencies]
tox = "^3.15.0"

[tool.poetry.extras]
test = ["pytest"]
typecheck = ["mypy"]
lint = ["black", "flake8"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = lint,typecheck,test

[testenv:lint]
extras =
    lint
commands =
    black service_template tests {tty::--diff}
    flake8 service_template tests --max-line-length=88

[testenv:typing]
extras =
    typecheck
commands =
    mypy service_template

[testenv:test]
extras =
    test
commands =
    pytest
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

